cabal-version: 1.12

name:           clash-circuit
version:        0.1.0.0
description:
  High level circuit composition in clash, based on linear types.
  Please see the README on GitHub at <https://github.com/oliverbunting/clash-circuit#readme>.
  NOTE, addock does not correctly render linear functions.
homepage:       https://github.com/oliverbunting/clash-circuit#readme
bug-reports:    https://github.com/oliverbunting/clash-circuit/issues
author:         Oliver Bunting
maintainer:     oliverbunting@gmail.com
copyright:      2021 Oliver Bunting
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/oliverbunting/clash-circuit

library
  hs-source-dirs: src
  exposed-modules:
    Clash.Circuit
    Clash.Circuit.Bus
    Clash.Circuit.Bus.Df
    Clash.Circuit.Prelude
    Clash.Circuit.Mealy
    Clash.Circuit.Unsafe

  default-extensions:
    BangPatterns
    BlockArguments
    ConstraintKinds
    DerivingVia
    DataKinds
    DefaultSignatures
    FlexibleInstances
    FlexibleContexts
    GADTs
    LambdaCase
    LinearTypes
    NoImplicitPrelude
    MagicHash
    MultiParamTypeClasses
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    UnicodeSyntax

  ghc-options:
    -Wall
    -Wcompat
    -haddock
    -fplugin=LiquidHaskell

  other-modules:
      Paths_clash_circuit
      -- These want upstreaming
      Control.Arrow.Linear
      Control.Category.Linear
      Control.Monad.Constrained.FreeT.Linear

  build-depends:
      clash-prelude >= 1.2.5 && < 1.6
    , ghc-prim >= 0.7.0
    , linear-base >= 0.1.0
    , liquid-base >= 4.15.0 && < 5
    , liquidhaskell >= 0.8.10.2


  default-language: Haskell2010
